--- a/blog/app/views/welcome/index.html.erb
+++ b/blog/app/views/welcome/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Welcome#index</h1>
 <h2>Hello, Rails</h2>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<%= link_to 'My Blog', controller: 'articles' %>
+<%= link_to 'New article', new_article_path %>
 <h3>by Ahmet AKŞİT</h3>
