--- a/blog/app/views/articles/index.html.erb
+++ b/blog/app/views/articles/index.html.erb
@@ -2,6 +2,7 @@
 
 <table>
   <tr>
+    <th>No</th>
     <th>Title</th>
     <th>Text</th>
     <th colspan="2"></th>
@@ -9,10 +10,15 @@
 
   <% @articles.each do |article| %>
       <tr>
+        <td><%= article.id %></td>
         <td><%= article.title %></td>
         <td><%= article.text %></td>
         <td><%= link_to 'Show', article_path(article) %></td>
         <td><%= link_to 'Edit', edit_article_path(article) %></td>
+        <td><%= link_to 'Destroy', article_path(article),
+                        method: :delete,
+                        data: { confirm: 'Are you sure?' } %></td>
       </tr>
   <% end %>
 </table>
+<%= link_to 'New article', new_article_path %>
